[project]
name = "find-known-secrets"
version = "1.3.0"
description = "Lossy python to markdown serializer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["secrets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "colorama",
    "docopt",
    "tabulate",
]

[project.urls]
Repository = "https://github.com/matthewdeanmartin/find_known_secrets"
Homepage = "https://github.com/matthewdeanmartin/find_known_secrets"
Documentation = "https://github.com/matthewdeanmartin/find_known_secrets"
"Bug Tracker" = "https://github.com/matthewdeanmartin/find_known_secrets/issues"
"Change Log" = "https://github.com/matthewdeanmartin/find_known_secrets/blob/main/CHANGES.md"

[project.scripts]
find_known_secrets = "find_known_secrets.main:process_docopts"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["find_known_secrets"]
include = [
    "find_known_secrets/**/*.py",
    "find_known_secrets/**/*.md",
    "find_known_secrets/**/*.txt",
    "find_known_secrets/**/*.html",
    "find_known_secrets/**/*.jinja",
]

[dependency-groups]
dev = [
    "pytest",
    "vermin",
    "hypothesis[cli]",
    "pre-commit",
    "mypy",
    "pylint>=3.0",
    "jiggle-version>=2.1.0",
    "troml-dev-status>=0.6.0; python_version >= '3.9'",
    "dont-be-lazy>=0.1.2; python_version >= '3.10'",
    "pydoc-fork>=3.0.0; python_version >= '3.10'",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.pip]
universal = true
[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["find_known_secrets"]
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 1000

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = [
    "E722",
    "E501",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "hide"
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: project.version"

[tool.hatch.version]
path = "find_known_secrets/__init__.py"
output_file = "CHANGELOG.${config:format}"

#[tool.setuptools]
## find = {}
#py-modules = ["find_known_secrets",
#    "find_known_secrets.deserialize",
#    "find_known_secrets.python_to_tables",
#    "find_known_secrets.serialize",
#]

